# comp

./: CMakeLists.txt  analyzer.cpp  analyzer.h  comp.pro  generator.cpp  generator.h  lexer.cpp  lexer.h  main.cpp  mytiny.pro  parser.cpp  parser.h  sample.tny  scanner.cpp  scanner.h  tm.cpp  token.cpp  token.h  treenode.h  vm.cpp
